--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 APP_DEBUG=true
 
 # DATABASE
-DATABASE_DSN='mysql:host=127.0.0.1;port=3306;charset=utf8;dbname=test'
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=
+DATABASE_DSN='mysql:host=39.108.6.204;port=3306;charset=utf8;dbname=super_twj'
+DATABASE_USERNAME=tongwenjie
+DATABASE_PASSWORD=huazhen1234
 
 # REDIS
 REDIS_HOST=127.0.0.1
